# StockcheckIV

./: CMakeLists.txt  CMakeSettings.json  README.md
StockckeckIV/: CMakeLists.txt
StockckeckIV/src/: CMakeLists.txt  main.cpp  main.qml
src/: CMakeLists.txt  config.txt  idatabase.h  infoBox.qml  main.cpp  main.qml  stockentity.h  tableViewModel.cpp  tableViewModel.h
src/configHandler/: CMakeLists.txt  confighandler.cpp  confighandler.h
src/sqliteAccess/: CMakeLists.txt  sqliteAccess.cpp  sqliteAccess.h
src/sqliteAccess/sqlite-snapshot-202007061213/: shell.c  sqlite3.h
src/stockcheck/: CMakeLists.txt  evaluator.cpp  evaluator.h  idatabase.h  stockcheck.h  stockentity.h
